--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,13 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "index.html",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+    "version": 2,
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "framework": "vite",
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
+    ],
+    "env": {
+      "VITE_API_BASE_URL": "https://retool-dashboard.onrender.com"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "env": {
-    "VITE_API_BASE_URL": "https://<render-backend-url>"
   }
-}
+  
